third_party/WebKit/Source/WebCore/dom/ScriptRunner.cpp
@@ -53,6 +53,11 @@ ScriptRunner::~ScriptRunner()
 void ScriptRunner::queueScriptForExecution(ScriptElement* scriptElement, CachedResourceHandle<CachedScript> cachedScript, ExecutionType executionType)
 {
     ASSERT(scriptElement);
+    
+    // Temporary: intended to help debug how null CachedScript objects can even get queued for execution, which
+    // seems to sometimes happen (see http://code.google.com/p/chromium/issues/detail?id=75604 )
+    if (!cachedScript.get())
+        CRASH();
 
     Element* element = scriptElement->element();
     ASSERT(element);
